# src/controllers/book.controller.ts
@@ -1,57 +1,77 @@
-import { Controller, Get, Route, Tags, Path, Post, Body, Delete} from "tsoa";
-import { BookDTO } from "../dto/book.dto";
-
-import { bookService } from "../services/book.service";
-
+import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags} from "tsoa";
+import {BookDTO} from "../dto/book.dto";
+import {bookService} from "../services/book.service";
+import {CustomError} from "../middlewares/errorHandler";
+import {Book} from "../models/book.model";
+import {BookCopyDTO} from "../dto/bookCopy.dto";
+import {bookCopyService} from "../services/bookCopy.service";
 
 @Route("books")
 @Tags("Books")
 export class BookController extends Controller {
-  @Get("/")
-  public async getAllBooks(): Promise<BookDTO[]> {
-    return bookService.getAllBooks();
-  }
-
-
-  @Get("{id}")
-  public async getBookById(@Path() id: number): Promise<BookDTO | null> {
-    let book = await bookService.getBookById(id);
-    
-    if (book === null) {
-      throw { status: 404, message: `Aucun livre trouvé avec l'id: ${id}` };
-    }
-    return book;
-  }
-
-  @Post("/")
-  public async createBook(
-    @Body() requestBody: { title: string; publishYear: number; isbn: string; authorId: number }
-  ): Promise<BookDTO> {
-    const { title, publishYear, isbn, authorId } = requestBody;
-
-    const book = await bookService.createBook(title, publishYear, isbn, authorId);
-
-    return {
-      id: book.id,
-      title: book.title,
-      publishYear: book.publishYear,
-      isbn: book.isbn,
-      author: book.author, 
-    };
-  }
-
-
-  @Delete("{id}")
-  public async deleteBook(@Path() id: number): Promise<void> {
-    const book = await bookService.getBookById(id);
-
-    if (!book) {
-      throw { status: 404, message: `Aucun livre trouvé avec l'id: ${id}` };
+    @Get("/")
+    public async getAllBooks(): Promise<BookDTO[]> {
+        return bookService.getAllBooks();
     }
 
-    await bookService.deleteBook(id);
-  }
+    // Récupère un livre par ID
+    @Get("/{id}")
+    public async getBookById(@Path() id: number): Promise<BookDTO | null> {
+        const book: Book | null = await bookService.getBookById(id);
+        if (!book) {
+            let error: CustomError = new Error("Book not found");
+            error.status = 404;
+            throw error;
+        }
+        return book;
+    }
+
+    // Crée un nouveau livre
+    @Post("/")
+    public async createBook(
+        @Body() requestBody: BookDTO
+    ): Promise<BookDTO> {
+        const {
+            title,
+            publishYear,
+            author,
+            isbn
+        } = requestBody;
+        return bookService.createBook(title, publishYear, author, isbn);
+    }
+
+    // Met à jour un livre par ID
+    @Patch("{id}")
+    public async updateBook(
+        @Path() id: number,
+        @Body() requestBody: BookDTO
+    ): Promise<BookDTO | null> {
+        const {title, publishYear, author, isbn} = requestBody;
+        const book: Book | null = await bookService.updateBook(id, title, publishYear, author, isbn);
+        if (!book) {
+            let error: CustomError = new Error("Book not found");
+            error.status = 404;
+            throw error;
+        }
+        return book;
+    }
+
+    // Supprime un livre par ID
+    @Delete("{id}")
+    public async deleteBook(@Path() id: number): Promise<void> {
+        await bookService.deleteBook(id);
+    }
+
+    // Récupère les copies d'un livre par ID
+    @Get("/{id}/bookCopys")
+    public async getBookBookCopysById(@Path() id: number): Promise<BookCopyDTO[] | null> {
+        const book: Book | null = await bookService.getBookById(id);
+        if (!book) {
+            let error: CustomError = new Error("Book not found");
+            error.status = 404;
+            throw error;
+        }
+
+        return bookCopyService.getBookCopysByBookId(id);
+    }
 }
-
-
-
