# src_old/dto/bookCopy.dto.ts
@@ -1,0 +1,5 @@
+export interface BookCopyDTO {
+    id?: number;
+    bookId: number;
+    status: 'available' | 'borrowed' | 'reserved';
+}
